--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ glam = { version = "0.31.0", features = ["bytemuck"] }
 image = { version = "0.25.9", default-features = false, features = ["png"] }
 pollster = "0.4.0"
 winit = {version = "0.30.12", default-features = false, features = ["rwh_06"]}
+rand = "0.9.2"
